# octorace-web

./: .dockerignore  .eslintcache  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  package.json
mockup/desktop/: desktop prototype.vp
mockup/mobile/: mobile prototype.vp
public/: asset-manifest.json  index.html  manifest.json
src/: App.tsx  bot.rs  constants.ts  guilds.json  index.tsx  macros.rs  main.rs  models.rs
src/api/: mod.rs  models.rs  user.rs
src/cache/: GuildStore.ts  ProfileStore.ts  Store.ts
src/components/: Friends.tsx  Guild.tsx  Guilds.tsx  Header.tsx  Login.tsx  Octorace.tsx  Profiles.tsx
src/css/: Guild.css  Lists.css  Login.css  Profiles.css  index.css
src/models/: Guild.ts  GuildStore.ts  Profile.ts
src/oauth/: mod.rs  routes.rs
src/util/: Organize.ts  Render.tsx  Sort.ts  Store.ts  Util.ts
static/: index.html
web/: .eslintcache  package.json
web/src/: App.tsx
web/src/views/: Home.tsx
